minor responsive issue on mobile nav

--- a/source/stylesheets/_module/_nav.scss
+++ b/source/stylesheets/_module/_nav.scss
@@ -35,6 +35,7 @@ nav {
     li {
       list-style: none;
       margin-left: .5rem;
+      margin-bottom: 0;
       a {
         height: 4rem;
         width: 4rem;
@@ -65,7 +66,7 @@ nav {
   box-shadow: 0px 0px 0px 1.5px transparent inset;
   border-radius: 50%;
   padding: 1rem;
-  left: -1rem;
+  left:-1rem;
   width: 4rem;
   height: 4rem;
   &:hover {
